--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": ">=2.1",
-        "twilio/sdk": ">=3.10.0"
+        "twilio/sdk": "dev-master"
     },
     "autoload": {
         "psr-0": { "Vresh\\TwilioBundle": "" }
